
==========================
 Changes from 3.6 -> 3.7:
==========================

  - Fix calling convention for ORB_EstimateOrbitSize
  - Fix the bug that orb!.gens could be immutable.
  - Improve OrbitBySuborbit to use random elements to find stabiliser els
  - New operation TestMembership for OrbitBySuborbits
  - Make all mutable objects properly mutable to allow for
    StructuralCopy.


==========================
 Changes from 3.5 -> 3.6:
==========================

  - Fixed a bug in the AVL tree GAP code (C version was fine)


==========================
 Changes from 3.4 -> 3.5:
==========================

  - Weak orbits of semigroups and monoids in Orb
  - grading for an orbit
  - Jenkins Hash Function (as yet undocumented)
  - Slight improvement of hashfunc options
  - Documentation improvements
  - OrbitGraph for Orb orbits
  - IsGradedOrbit
  - New fast methods for AsList, Enumerator and ConstantTimeAccessList
  - Method for Iterator for Orb orbits
  - Kernel method for PermLeftQuoTransformationNC
  - Kernel method for MappingPermSetSet
  - Kernel method for MappingPermListList
  - Kernel method for ImageSetOfTransformation and KernelOfTransformation
  - Allow a different operation in FindSuborbits
  - Provide ORB_HashFunctionForPlainFlatList
  - Make ProfileGlobalFunctions(true) work for C functions
  - Slightly change OrbitStatisticOn* with respect to orbit length limit


==========================
 Changes from 3.3 -> 3.4:
==========================

  - Fixed a bug in the gap4r4 compatibility file in SlotUsagePattern.
  - Switch off accus in initialisation phase because there is no point.


==========================
 Changes from 3.2 -> 3.3:
==========================

  - Fixed a bug in ProductReplacer


==========================
 Changes from 3.1 -> 3.2:
==========================

  - Fixed incompatibility with fr package, FLOATs again!


==========================
 Changes from 3.0 -> 3.1:
==========================
