@@ -12,6 +12,7 @@
   - New operation TestMembership for OrbitBySuborbits
   - Make all mutable objects properly mutable to allow for
     StructuralCopy.
+  - New internal function TABLE_OF_KERNEL_TRANS.
 
 
 ==========================
